# rustream

./: .gitignore  Cargo.toml  LICENSE  README.md  build.rs  testing_main.rs  testing_new_recorder.rs
.cargo/: config.toml
.github/workflows/: build.yml  ci.yml  rust.yml  test.yml
libs/ffmpeg/include/libavutil/: ffversion.h
src/: annotation.rs  annotations.rs  app.rs  area_capture.rs  area_selection.rs  audio_capture.rs  capture.rs  capture_screen.rs  common.rs  config.rs  data_streaming.rs  ffmpeg_utils.rs  frame_grabber.rs  hotkey.rs  hotkeys.rs  main.rs  multimonitor.rs  network.rs  receiver.rs  recording.rs  screen_capture.rs  secondaryapp.rs  sender.rs  ui.rs  video_recorder.rs
src/metrics/: mod.rs
src/screen_capture/: capturer.rs  frame.rs  mod.rs
