[package]
name = "rustream"
version = "0.1.0"
edition = "2021"
description = "Minimal Streaming App P2P with Rust"
license-file = "LICENSE"
repository = "https://github.com/CodeClimberNT/rustream"
readme = "README.md"

[lints.rust]
unsafe_code = "forbid"

[dependencies]
# UI, (wgpu use gfx to create a HAL: https://github.com/gfx-rs/gfx#hardware-abstraction-layer)
egui = { version = "0.29.1", features = [
    "bytemuck",
    # Enable to debug if the app freezes
    "deadlock_detection",
    "default_fonts",
    "serde",
], default-features = false }
eframe = { version = "0.29.1", features = [
    "__screenshot",
    "serde",
    "wayland",
    "wgpu",
    "x11",
], default-features = false }
egui_extras = { version = "0.29.1", features = [
    "serde",
    "svg",
], default-features = false }

# Screen Capture and Image Processing
scrap = "0.5.0"
image = { version = "0.25.5", features = ["serde"], default-features = false }

# Audio Processing
cpal = "0.15.3"
opus = "0.3.0"
hound = "3.5.1"

# Debbuging
log = "0.4.22"
env_logger = "0.11.5"

# Decoding
regex = "1.5"

# Networking (?)
serde = { version = "1.0.215", features = ["derive"], default-features = false }
bincode = "1.3.3"
rfd = { version = "0.15.1", features = ["gtk3", "tokio"] }
dirs = "5.0.1"
tokio = { version = "1.42.0", features = ["full"] }

[profile.dev]
opt-level = 1
# Enable a large amount of optimization in the dev profile for dependencies.
[profile.dev.package."*"]
opt-level = 3

[profile.release]
# Enable more optimization in the release profile at the cost of compile time.
# Compile the entire crate as one unit.
# Slows compile times, marginal improvements.
codegen-units = 1
# Do a second optimization pass over the entire program, including dependencies.
# Slows compile times, marginal improvements.
lto = "thin"
